--- a/src/Components/Header/Navigation/Nav.css
+++ b/src/Components/Header/Navigation/Nav.css
@@ -1,7 +1,8 @@
+/*********** DESKTOP 1444 ***********/
+
 .header_nav {
-    width: 98%;
+    width: 100%;
     height: 80px;
-    border-bottom: 3px solid rgba(255, 255, 255, 0.5);
     position: fixed;
     top: 0;
     left: 50%;
@@ -13,15 +14,32 @@
 }
 
 .nav_column {
-    border: 1px solid #fff;
     position: relative;
+    /* border: 1px solid #fff; */
 }
 
 .header_nav .nav_logo {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: 8px solid rgba(255, 255, 255, 0.9);
+    transform: translateY(-150%);
+    opacity: 0;
+    animation: animateLogo 1s forwards;
+}
+
+.header_nav span {
+    animation: animateSpan 1s forwards;
+    opacity: 0;
+}
+.header_nav .divider-one {
+    animation-delay: 1s;
+}
+.header_nav .divider-two {
+    animation-delay: 1.2s;
+}
+.header_nav .divider-three {
+    animation-delay: 1.4s;
 }
 
 .header_nav .nav_items {
@@ -38,10 +56,60 @@
 .nav_items .nav_item {
     padding: 0 25px;
     cursor: pointer;
+    animation: animateNav 1s forwards;
+    opacity: 0;
+    transition: .2s;
+    line-height: 80px;
+}
+
+.nav_items .nav_item:hover {
+    color: orange;
+    text-decoration: underline;
+}
+
+.nav_items .nav_item:nth-child(1) {
+    animation-delay: .2s;
+}
+.nav_items .nav_item:nth-child(3) {
+    animation-delay: .4s;
+    position: relative;
+}
+.nav_items .nav_item:nth-child(5) {
+    animation-delay: .6s;
+}
+.nav_items .nav_item:nth-child(7) {
+    animation-delay: .8s;
+}
+
+.nav_items .nav_item:nth-child(3):hover > .room_class {
+    height: 160px;
+}
+
+.nav_items .room_class {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.5);
+    /* top: 70px; */
+    left: 0;
+    width: 100%;
+    height: 0px;
+    overflow: hidden;
+    list-style: none;
+    text-align: center;
+    transition: .5s;
+}
+
+.room_class .class_item {
+    margin-bottom: 10px;
+    color: #fff;
+    line-height: 30px;
+}
+.room_class .class_item:hover {
+    color: orange;
+    text-decoration: underline;
 }
 
 .logged_in {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 80px;
     width: 100%;
     position: relative;
@@ -61,25 +129,151 @@
     font-size: 30px;
     color: orange;
     text-align: center;
-    cursor: pointer;
+    position: relative;
+    animation: animateLogo 1s forwards;
+    opacity: 0;
+    animation-delay: 1s;
 }   
 
-.profile_nav {
-    background-color: orange;
-    width: 200px;
-    height: 250px;
+.hover_holder {
+    /* border: 3px solid red; */
+    width: 60px;
+    height: 80px;
+    border-radius: 10px;
     position: absolute;
-    top: 80px;
-    right: 0;
+    top: 0px;
+    right: 0px;
 }
 
-.profile_nav .triangle {
-    width: 45px;
-    height: 45px;
-    background-color: inherit;
+.hover_holder:hover > .profile_options,
+.profile_options:hover {
+    visibility: visible;
+    top: 80px;
+    opacity: 1;
+}
+
+.profile_circle .profile_options {
+    width: 120px;
+    height: 90px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 1);;
     position: absolute;
-    right: 10px;
+    top: 90px;
+    right: 9px;
+    /* box-shadow: 0 0 10px #222; */
+    list-style: none;
+    font-size: 24px;
+    opacity: 0;
+    padding-top: 10px;
+    visibility: hidden;
+    transition: .3s;
+}
+
+.profile_options .options_triangle {
+    width: 20px;
+    height: 20px;
+    background-color: rgba(255, 255, 255, 1);
+    position: absolute;
+    right: 0;
     top: 0;
-    transform: translateY(-50%) rotate(45deg);
+    transform: translate(-50%, -45%) rotate(45deg);
+    mix-blend-mode: screen;
+    /* box-shadow: 0 0 10px #222; */
+}
+
+.profile_options .options_item {
+    cursor: pointer;
+    z-index: 1;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.logged_out {
+    height: 80px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+.logged_out .log_in {
+    width: 100px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, .5);
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    transition: .3s;
+    outline: none;
+    border: none;
+    animation: animateLogo 1s forwards;
+    opacity: 0;
+    animation-delay: 1s;
+    margin-left: auto;
+}
+
+.logged_out .log_in:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+.header_underline {
+    width: 0%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 3px;
+    background-color: rgba(255, 255, 255, 0.5);
+    animation: animateUnderline 1.5s forwards linear;
+}
+
+/*********** MOBILE ***********/
+
+@media screen and (max-width: 1024px) {
+
+}
+
+/*********** ANIMATIONS ***********/
+
+@keyframes animateUnderline {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 98%;
+    }
+}
+
+@keyframes animateLogo {
+    from {
+        transform: translateY(-150%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+@keyframes animateSpan {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes animateNav {
+    from {
+        transform: translateY(-150%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0%);
+        opacity: 1;
+    }
 }
 
