--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@ body {
     transform: translateY(-50%);
     z-index: 2;
     display: none;
-    border: 1px solid red;
     background-color: #fff;
+    opacity: 0;
 }
 
 .content {
