--- a/src/Components/Navigation/Mobile/Nav.css
+++ b/src/Components/Navigation/Mobile/Nav.css
@@ -105,3 +105,9 @@
 .body_nav .item_icon {
     font-size: 24px;
 }
+
+@media screen and (min-width: 850px) { 
+    .mobile_nav {
+        display: none;
+    }
+}
