--- a/src/Components/Navigation/Desktop/Nav.css
+++ b/src/Components/Navigation/Desktop/Nav.css
@@ -12,6 +12,7 @@
     align-items: center;
     padding: 0 15px;
     z-index: 2;
+    animation: animateNavBg 1s forwards;
 }
 
 .nav_column {
@@ -88,7 +89,8 @@
 
 .nav_items .room_class {
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 15px -5px #333 ;
     /* top: 70px; */
     left: 0;
     width: 100%;
@@ -161,7 +163,7 @@
     position: absolute;
     top: 90px;
     right: 9px;
-    /* box-shadow: 0 0 10px #222; */
+    box-shadow: 0 2px 15px -5px #333;
     list-style: none;
     font-size: 24px;
     opacity: 0;
@@ -317,6 +319,13 @@
     to {
         transform: translateY(0%);
         opacity: 1;
+    }
+}
+
+@keyframes animateNavBg {
+    to {
+        background-color: rgba(0, 0, 0, 0.2);
+        box-shadow: 0 5px 35px -10px #333;
     }
 }
 
