--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,13 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 20px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+
+.rooms,
+.gallery,
+.contact {
+    height: 150vh;
+    text-align: center;
+    background-color: #fff;
 }
