--- a/src/Components/Navigation/Mobile/Nav.css
+++ b/src/Components/Navigation/Mobile/Nav.css
@@ -6,6 +6,11 @@
     top: 0;
 }
 
+.mobile_nav a {
+    text-decoration: none;
+    color: #fff;
+}
+
 .mobile_nav .nav_holder {
     width: 80%;
     height: 100%;
