--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -99,7 +99,7 @@
     text-transform: uppercase;
 }
 
-.slick-dots {
+.header_slider .slick-dots {
     position: absolute;
     bottom: 50px;
     width: 150px;
@@ -110,11 +110,11 @@
     align-items: center;
 }
 
-.slick-dots li button {
+.header_slider .slick-dots li button {
     opacity: 0;
 }
 
-.slick-dots li {
+.header_slider .slick-dots li {
     width: 15px;
     height: 15px;
     border-radius: 50%;
@@ -122,7 +122,7 @@
     transition: .5s;
 }
 
-.slick-dots li.slick-active {
+.header_slider .slick-dots li.slick-active {
     /* width: 20px;
     height: 20px; */
     background-color: #fff;
