--- a/src/Components/Content/Contact/Contact.css
+++ b/src/Components/Content/Contact/Contact.css
@@ -5,9 +5,22 @@
 
 .contact .contact_map {
     height: 650px;
-    border: 2px solid black;
     background-color: #fff;
     position: relative;
+    z-index: 1;
+}
+
+.contact_map .location_pin {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    background: none;
+    background-image: url(../../../Assets/Contact/location-pin.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .contact_map .contact_form {
@@ -19,6 +32,7 @@
     left: 50%;
     transform: translate(-50%, 50%);
     box-shadow: 0px 7px 35px -15px #444;
+    z-index: 2;
 }
 
 .contact_form .contact_info {
