--- a/src/Components/Navigation/Mobile/Nav.css
+++ b/src/Components/Navigation/Mobile/Nav.css
@@ -4,112 +4,144 @@
     position: fixed;
     left: 0;
     top: 0;
-}
-
-.mobile_nav a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.mobile_nav .nav_holder {
-    width: 80%;
-    height: 100%;
+    z-index: 2;
     overflow-y: scroll;
+    background-color: #fff;
+    transform: translateX(-100%);
+    visibility: hidden;
+    transition: .5s;
 }
 
-.nav_bg {
-    background-image: url(../../../Assets/MobileNav/mobile_bg.jpg);
-    background-repeat: no-repeat;
-    background-position: 15%;
-    background-size: cover;
-    filter: brightness(.5);
-    position: absolute;
+.mobile_nav.active {
+    visibility: visible;
+    transform: translateX(0%);
+}
+
+.nav_holder {
+    position: relative;
+    min-height: 100%;
+}
+
+.mobile_bg {
     height: 100%;
     width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background: 
+        radial-gradient(ellipse at top, #42dcff, transparent),
+        radial-gradient(ellipse at bottom, #ff911b, transparent);
+    animation: animateGradient 5s linear infinite;
+    z-index: 1;
 }
 
-.mobile_nav .nav_auth {
-    /* background-color: #fff; */
-    height: 180px;
-    color: #fff;
+
+
+.mobile_nav .nav_header,
+.mobile_nav .nav_body {
+    z-index: 1;
     position: relative;
 }
 
-.nav_auth .logged_in--mobile {
-    width: 100%;
-    height: 100%;
-    /* border: 3px solid green; */
-    padding-top: 20px;
-}
-
-.logged_in--mobile .profile_img {
-    width: 100px;
-    height: 100px;
-    background-color: #000;
-    border-radius: 50%;
-    margin: 0 auto 10px;
-    border: 5px solid #fff;
-}
-
-.logged_in--mobile .user_email {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.logged_in--mobile .log_out,
-.logged_out--mobile .login_btn {
-    width: 100px;
-    height: 30px;
-    color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.7);
-    transition: .3s;
-    margin: 0 auto;
-}
-.logged_in--mobile .log_out:hover,
-.logged_out--mobile .login_btn:hover {
-    background-color: rgba(255, 255, 255, 1);
-}
-
-.logged_out--mobile {
+.mobile_nav .nav_header {
+    min-height: 180px;
     padding-top: 70px;
+    padding-bottom: 10px;
+}
+
+.nav_header .header_title {
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 7px;
+    text-shadow: 0 0 5px #444;
+}
+
+.nav_header .title_underline {
+    height: 2px;
+    background-color: #fff;
+    width: 40px;
+    margin: 0 auto 20px;
+}
+
+.nav_header .profile_img {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    margin: 0 auto 10px;
+    background-color: #5b5b5b;
+    cursor: pointer;
+    box-shadow: 0px 6px 25px -8px rgba(0,0,0,0.5);
+}
+
+.nav_header .user_name,
+.nav_header .user_email {
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    text-shadow: 0 0 5px #444;
+}
+
+.nav_header .user_email {
+    font-weight: 300;
+    cursor: pointer;
 }
 
 .mobile_nav .nav_body {
-    /* min-height: 100%; */
-    /* background-color: #fff; */
     position: relative;
-    z-index: 1;
-    padding-left: 50px;
-    /* overflow-y: scroll; */
+    min-height: 100px;
+    padding: 10px 0 50px;
 }
 
-.body_nav {
+.mobile_items:first-child {
+    margin-bottom: 15px;
+}
+
+.mobile_items {
+    width: 90%;
+    background-color: #fff;
+    margin: 0 auto;
     list-style: none;
-    padding-left: 10px;
-    top: 10%;
+    border-radius: 10px;
+    box-shadow: 0px 6px 25px -8px rgba(0,0,0,0.5);
 }
 
-.body_nav .nav_item {
-    line-height: 100px;
-    display: grid;
-    grid-template-columns: 40px 1fr;
-    color: #fff;
+.mobile_items a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.mobile_items .nav_item {
+    padding-left: 20px;
+    line-height: 50px;
+    border-bottom: 1px solid #b5b5b5;
     cursor: pointer;
-    text-transform: uppercase;
-    font-size: 18px;
+    display: grid;
+    grid-template-columns: 30px 1fr;
+}
+.mobile_items .nav_item:last-child {
+    border-bottom: none;
 }
 
-.body_nav .item_icon {
-    font-size: 24px;
-}
-
-@media screen and (min-width: 850px) { 
+@media screen and (min-width: 850px) {
     .mobile_nav {
         display: none;
+    }
+}
+
+@keyframes animateGradient {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+    50% {
+        filter: hue-rotate(360deg);
+    }
+    100% {
+        filter: hue-rotate(0deg);
     }
 }
