--- a/src/Components/Content/Contact/Contact.css
+++ b/src/Components/Content/Contact/Contact.css
@@ -17,7 +17,7 @@
     width: 30px;
     height: 30px;
     background: none;
-    background-image: url(../../../Assets/Contact/location-pin.svg);
+    background-image: url(/Assets/Contact/location-pin.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
