--- a/src/Components/Content/Home/Home.css
+++ b/src/Components/Content/Home/Home.css
@@ -21,7 +21,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../../../Assets/Home/Widget/widget_bg1.jpg);
+    background-image: url(/Assets/Home/Widget/widget_bg1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -57,15 +57,15 @@
     background-size: contain;
 }
 .widget_inputs .input_item:nth-child(1) {
-    background-image: url(../../../Assets/Home/Widget/rooms.svg);    
+    background-image: url(/Assets/Home/Widget/rooms.svg);    
 }
 .widget_inputs .input_item:nth-child(2) {
-    background-image: url(../../../Assets/Home/Widget/resume.svg);  
+    background-image: url(/Assets/Home/Widget/resume.svg);  
     background-size: 33px;  
 }
 .widget_inputs .input_item:nth-child(3),
 .widget_inputs .input_item:nth-child(4) {
-    background-image: url(../../../Assets/Home/Widget/calendar.svg);    
+    background-image: url(/Assets/Home/Widget/calendar.svg);    
 }
 
 .booking_widget button {
@@ -102,11 +102,10 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-image: url(../../../Assets/Home/WhyUs/why-us-bg.jpg);
+    background-image: url(/Assets/Home/WhyUs/why-us-bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-attachment: fixed; */
     filter: brightness(50%);
 }
 
