--- a/src/Components/Content/Rooms/Rooms.css
+++ b/src/Components/Content/Rooms/Rooms.css
@@ -99,7 +99,7 @@
 .section_header .accordion_arrow {
     width: 25px;
     height: 25px;
-    background-image: url(../../../Assets/Rooms/angle-arrow-down.svg);
+    background-image: url(/Assets/Rooms/angle-arrow-down.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 80%;
@@ -184,7 +184,7 @@
 .relevance_options .relevance_arrow {
     width: 20px;
     height: 20px;
-    background-image: url(../../../Assets/Rooms/angle-arrow-down.svg);
+    background-image: url(/Assets/Rooms/angle-arrow-down.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 80%;
@@ -292,7 +292,7 @@
     width: 100%;
     height: 65%;
     position: relative;
-    background-image: url("../../../Assets/Rooms/room_1.jpg");
+    background-image: url(/Assets/Rooms/room_1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
