--- a/src/Components/Content/Rooms/RoomPage/RoomPage.css
+++ b/src/Components/Content/Rooms/RoomPage/RoomPage.css
@@ -1,20 +1,21 @@
 /************* GENERAL *************/
 
 .room_page {
-    min-height: 150vh;
+    /* min-height: 150vh; */
     font-size: 18px;
+    position: relative;
 }
 
 .room_page .room_header {
     padding-top: 90px;
     background-color: #eeeef0;
-    padding-bottom: 100px;
-    border: 1px solid red;
+    padding-bottom: 90px;
+    /* border: 1px solid red; */
 }
 
 .room_header .content {
     padding-top: 0;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     display: grid;
     grid-template-columns: 60% 1fr;
 }
@@ -22,8 +23,11 @@
 /************* HEADER *************/
 
 .room_header .header_column {
-    border: 1px solid black;
-    min-height: 500px;
+    /* border: 1px solid black; */
+}
+
+.room_header .room_preview {
+    width: 100%;
 }
 
 
@@ -43,10 +47,17 @@
     width: 300px;
     height: 250px;
     background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 5px 25px -3px rgba(68, 68, 68, 0.4);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-shadow: 0 5px 25px -3px rgba(68, 68, 68, 0.4);
+            box-shadow: 0 5px 25px -3px rgba(68, 68, 68, 0.4);
     border-radius: 10px;
 }
 
@@ -54,7 +65,9 @@
     /* border: 1px solid black; */
     display: grid;
     grid-template-columns: 80px 1fr;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 200px;
     height: 40px;
 }
@@ -75,8 +88,11 @@
     font-size: 18px;
     cursor: pointer;
     border: 2px solid #fff;
+    background-color: #fff;
     outline: none;
+    -webkit-transition: .3s;
     transition: .3s;
+    border-radius: 15px;
 }
 
 .room_booking .book_btn:hover {
@@ -100,14 +116,19 @@
 
 .room_body .body_nav {
     height: 50px;
-    border: 1px solid green;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: relative;
 }
 
 .room_body .nav_item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 100%;
     width: 150px;
     padding-left: 15px;
@@ -118,18 +139,8 @@
     font-weight: bold;
 }
 
-.room_body .nav_underline {
-    height: 3px;
-    background-color: violet;
-    width: 150px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
 .room_body .body_pages {
-    min-height: 100vh;
-    border: 2px solid orange;
+    /* border: 2px solid orange; */
     position: relative;
     overflow: hidden;
 }
@@ -137,8 +148,9 @@
 .room_body .body_pages > div {
     background-color: #fff;
     display: none;
-    padding: 20px;
-    animation: transitionTabs .3s forwards;
+    padding: 20px 20px 80px 20px;
+    -webkit-animation: transitionTabs .3s forwards;
+            animation: transitionTabs .3s forwards;
 }
 
 .room_body .body_pages h2 {
@@ -151,6 +163,15 @@
 .room_body .reviews.active {
     opacity: 1;
     display: block;
+}
+
+@-webkit-keyframes transitionTabs {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes transitionTabs {
@@ -168,6 +189,7 @@
 
 .room_body .card {
     padding: 40px 20px 20px 20px;
+    height: auto;
 }
 
 .room_body .feedback_message  {
@@ -213,12 +235,83 @@
     margin: 0 auto;
     border: none;
     background-color: orange;
-    box-shadow: 0 5px 15px -5px rgba(68, 68, 68, 0.8);
+    -webkit-box-shadow: 0 5px 15px -5px rgba(68, 68, 68, 0.8);
+            box-shadow: 0 5px 15px -5px rgba(68, 68, 68, 0.8);
     cursor: pointer;
 }
 
+/************** MEDIA AUERIES **************/
 
+@media screen and (max-width: 992px) {
+    .room_page .room_header {
+        padding-bottom: 30px;
+    }
+    
+    .room_header .content {
+        grid-template-columns: 1fr;
+    }
+    .room_header .room_preview {
+        width: 100vw;
+        height: 500px;
+    }
 
+    .room_slider {
+        max-width: 600px;
+    }
 
+    .room_booking .title_rating {
+        padding: 0;
+        position: absolute;
+        top: 15px;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+                transform: translateX(-50%);
+        text-align: center;
+        width: 330px;
+    }
+
+    .title_rating .room_title {
+        margin-bottom: 5px;
+    }
+
+    .room_slider .slick-dots > li {
+        width: 50px;
+        height: 50px;
+    }
+
+    .room_booking .room_calendar,
+    .room_booking .room_guests,
+    .room_booking .book_btn {
+        margin: 0 auto 20px;
+    }
+
+    .room_booking .book_btn {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .room_slider {
+        width: 95%;
+    }
+
+    .new_review .feedback_card {
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .room_booking .title_rating {
+        width: 270px;
+    }
+
+    .title_rating .room_title {
+        font-size: 24px;
+    }
+
+    .new_review .feedback_date {
+        display: none;
+    }
+}
 
 
