--- a/src/Components/Content/Rooms/Rooms.css
+++ b/src/Components/Content/Rooms/Rooms.css
@@ -292,7 +292,7 @@
     width: 100%;
     height: 65%;
     position: relative;
-    background-image: url(/Assets/Rooms/room_1.jpg);
+    /* background-image: url(/Assets/Rooms/room_1.jpg); */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
