--- a/src/Components/Content/Rooms/BookingModal/BookingModal.css
+++ b/src/Components/Content/Rooms/BookingModal/BookingModal.css
@@ -23,7 +23,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background-color: #fafafa;
     z-index: 2;
     box-shadow: 0px 6px 30px -10px rgba(0,0,0,0.83);
     border-radius: 25px;
@@ -81,8 +81,18 @@
 
 .booking_modal .modal_body {
     position: relative;
+    overflow-y: scroll;
+}
+
+.booking_modal .body_holder {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     display: grid;
     grid-template-columns: 60% 1fr;
+    overflow-y: scroll;
 }
 
 .booking_modal .body_column:nth-child(1) {
@@ -264,3 +274,44 @@
         transform: translateY(-50%) rotate(360deg);
     }
 }
+
+/*************** MEDIA QUERIES ***************/
+
+@media screen and (max-width: 850px) {
+    .booking_bg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .booking_modal {
+        width: 100%;
+        height: 100%;
+        /* padding-bottom: 15px; */
+        border-radius: 0;
+    }
+
+    .booking_modal .room_slider {
+        max-width: 300px;
+    }
+
+    .booking_modal .body_holder {
+        height: 920px;
+        display: grid;
+        grid-template-columns: 1fr;
+        overflow-y: scroll;
+    }
+
+    .booking_modal .booking_calendar {
+        width: 300px;
+        height: 280px;
+        margin: 0 auto 30px;
+    }
+
+    .booking_services .booking_price {
+        margin-bottom: 40px;
+    }
+}
+
+/* @media screen and (max-height: 850px) {
+
+} */
