--- a/src/Components/Content/Rooms/Rooms.css
+++ b/src/Components/Content/Rooms/Rooms.css
@@ -3,6 +3,7 @@
 .rooms {
     /* min-height: 150vh; */
     padding-bottom: 30px;
+    background-color: #fafafa;
 }
 
 .rooms .content {
@@ -32,7 +33,7 @@
 }
 
 .rooms .rooms_column:nth-child(2) {
-    padding: 10px;
+    padding-top: 10px;
 }
 
 /*********** FILTERS ***********/
@@ -255,6 +256,7 @@
     box-shadow: 0px 7px 20px -5px rgba(0,0,0,0.2);
     overflow: hidden;
     position: relative;
+    background-color: #fff;
 }
 
 .room_card .card_info--toggle {
