--- a/src/Components/Content/Home/Home.css
+++ b/src/Components/Content/Home/Home.css
@@ -11,7 +11,7 @@
     margin: 0 auto 100px;
     border-radius: 35px;
     position: relative;
-    box-shadow: 0 3px 20px -5px #444;   
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);   
     border: 5px solid #fff; 
 }
 
@@ -214,7 +214,7 @@
     height: 150px;
     background-color: #fff;
     position: relative;
-    box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.35);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     padding: 40px 10px 10px;
 }
 
@@ -303,7 +303,6 @@
         margin: 0 auto 100px;
         border-radius: 35px;
         position: relative;
-        box-shadow: 0 3px 20px -5px #444;   
         border: 5px solid #fff; 
     }
     
