--- a/src/Components/Content/Rooms/Rooms.css
+++ b/src/Components/Content/Rooms/Rooms.css
@@ -253,10 +253,15 @@
     border-radius: 20px;
     /* border: 1px solid red; */
     justify-content: center;
-    box-shadow: 0px 7px 20px -5px rgba(0,0,0,0.2);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     overflow: hidden;
     position: relative;
     background-color: #fff;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.cards_holder .room_card:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .room_card .card_info--toggle {
