--- a/src/Components/Modals/BookingModal/BookingModal.css
+++ b/src/Components/Modals/BookingModal/BookingModal.css
@@ -113,6 +113,7 @@
 .booking_modal .slick-dots > li {
     width: 50px;
     height: 50px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 /*************** BOOKING STEPS ***************/
@@ -184,6 +185,7 @@
     outline: none;
     margin: 0 auto;
     cursor: pointer;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 /*----- STEP-2 -----*/
@@ -220,7 +222,7 @@
     background-color: #fff;
     margin: 0 auto 10px;
     border-radius: 5px;
-    box-shadow: 0px 5px 10px -7px #000000;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     position: relative;
     display: flex;
     align-items: center;
