--- a/src/Components/Modals/BookingCart/BookingCart.css
+++ b/src/Components/Modals/BookingCart/BookingCart.css
@@ -6,9 +6,14 @@
     left: 0;
     background-color: #fafafa;
     z-index: 3;
-    transform: translateX(0%);
-    padding-top: 40px;
+    transform: translateX(100%);
     overflow-y: scroll;
+    padding: 40px 30px;
+    transition: .5s;
+}
+
+.booking_cart.active {
+    transform: translateX(0%);
 }
 
 .booking_cart .cart_close {
@@ -47,9 +52,9 @@
     display: flex;
     align-items: center;
     position: fixed;
-    left: 0;
+    right: 0;
     top: 0;
-    transform: translate(-30px, 150px);
+    transform: translate(10px, 150px);
     background-color: #fff;
     z-index: 2;
     padding-left: 8px;
@@ -79,23 +84,43 @@
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    /* display: none; */
 }
 
 .cart_overview .overview_item {
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    border-bottom: 2px solid #ccc;
     min-height: 150px;
     display: grid;
     grid-template-columns: 200px 1fr 1fr 1fr;
 }
 
-.overview_item .item_column {
-    border: 1px solid black;
+.cart_overview .overview_item:last-child {
+    border: none;
 }
+
+/* .overview_item .item_column {
+    border: 1px solid black;
+} */
 
 .overview_item .item_column:nth-child(2) > *,
 .overview_item .item_column:nth-child(3) > *,
 .overview_item .item_column:nth-child(4) > * {
+    padding-top: 10px;
     margin-bottom: 10px;
+}
+
+.overview_item .item_column:nth-child(1) {
+    padding: 10px;
+}
+
+.overview_item .room_img {
+    background-image: url(/Assets/RoomPage/room_10/1.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
 }
 
 .overview_item .item_title {
@@ -103,9 +128,9 @@
     font-size: 24px;
 }
 
-.overview_item .room_rating {
+/* .overview_item .room_rating {
     border: 1px solid black;
-}
+} */
 
 .overview_item .overview_check {
     font-size: 18px;
@@ -127,7 +152,7 @@
 }
 
 .overview_item .item_column:nth-child(4) .price_holder {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 100px;
     text-align: center;
 }
@@ -148,11 +173,12 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border: none;
 }
 
 .cart_overview .final_holder {
     text-align: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 80px;
     display: flex;
     flex-direction: column;
@@ -172,14 +198,105 @@
     color: red;
 }
 
+.cart_overview .confirmation {
+    min-height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cart_overview .confirmation_btn,
+.cart_confirmation .confirmation_btn {
+    padding: 15px 20px;
+    font-size: 18px;
+    background-color: #57b357;
+    display: block;
+    margin: 0 auto;
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
 /************* CONFIRMATION *************/
 
 .booking_cart .cart_confirmation {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
     background-color: #fff;
-    padding: 20px;
+    padding: 60px 40px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.cart_confirmation .confirmation_inputs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    margin-bottom: 30px;
+}
+
+.confirmation_inputs input {
+    height: 40px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #ccc;
+    outline: none;
+    border: none;
+    border-bottom: 3px solid #ccc;
+}
+.confirmation_inputs input::placeholder {
+    color: #ccc;
+}
+.confirmation_inputs input:focus::placeholder {
+    color: #6d6d6d;
+}
+.confirmation_inputs input:focus {
+    color: #6d6d6d;
+    border-color: #6d6d6d;
+}
+
+.cart_confirmation textarea {
+    width: 100%;
+    resize: none;
+    border: none;
+    font-size: 18px;
+    color: #ccc;
+    font-weight: bold;
+    border-bottom: 3px solid #ccc;
+    min-height: 150px;
+    outline: none;
+    margin-bottom: 30px;
+}
+.cart_confirmation textarea::placeholder {
+    color: #ccc;
+}
+.cart_confirmation textarea:focus {
+    color: #6d6d6d;
+    border-color: #6d6d6d;
+}
+.cart_confirmation textarea:focus::placeholder {
+    color: #6d6d6d;
+}
+
+.cart_confirmation .payment_options {
+    width: 260px;
+    margin: 0 auto 30px;
+    font-size: 18px;
+}
+
+.payment_options .option label {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.payment_options input {
+    margin-right: 15px;
+    line-height: 30px;
 }
 
 /************* MEDIA QUERIES *************/
@@ -206,13 +323,28 @@
         top: 50%;
         right: 10px;
         transform: translateY(-50%);
-        border: 1px solid black;
         text-align: center;
         display: block;
     }
 
     .overview_item .item_column:nth-child(4) {
         display: none;
+    }
+
+    .cart_confirmation .confirmation_inputs {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .cart_confirmation .confirmation_inputs {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .booking_cart {
+        padding: 40px 0px;
     }
 }
 
