--- a/src/Components/Content/Rooms/Rooms.css
+++ b/src/Components/Content/Rooms/Rooms.css
@@ -155,6 +155,9 @@
     font-size: 16px;
     cursor: pointer;
 }
+.sort_price .sort_option.active {
+    font-weight: bold;
+}
 .sort_price .sort_option:hover {
     color: orange;
 }
