--- a/src/Components/Modals/BookingCart/BookingCart.css
+++ b/src/Components/Modals/BookingCart/BookingCart.css
@@ -137,11 +137,34 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .overview_item .item_title {
     font-weight: bold;
     font-size: 24px;
+}
+
+.overview_item .room_img .remove_item {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: red;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.room_img .remove_item > div {
+    width: 18px;
+    height: 4px;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* .overview_item .room_rating {
@@ -327,6 +350,7 @@
 
     .overview_item .item_column:nth-child(1) {
         height: 170px;
+        position: relative;
     }
 
     .overview_item .item_column:nth-child(3) {
