--- a/src/Components/Modals/BookingCart/BookingCart.css
+++ b/src/Components/Modals/BookingCart/BookingCart.css
@@ -17,8 +17,8 @@
 }
 
 .booking_cart .cart_close {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     /* border: 1px solid black; */
     position: absolute;
     top: 10px;
@@ -29,8 +29,8 @@
 }
 
 .cart_close > div {
-    width: 30px;
-    height: 5px;
+    width: 20px;
+    height: 3px;
     background-color: #777;
     position: absolute;
     top: 50%;
@@ -105,6 +105,8 @@
 
 .cart_overview > h2 {
     text-align: center;
+    font-size: 18px;
+    padding-top: 20px;
 }
 
 .cart_overview .overview_item {
@@ -393,6 +395,10 @@
 }
 
 @media screen and (max-width: 375px) {
+    .booking_cart .cart_title {
+        font-size: 24px;
+    }
+
     .booking_cart .cart_overview {
         padding: 0px;
     }
