--- a/src/Components/Content/Rooms/RoomPage/RoomPage.css
+++ b/src/Components/Content/Rooms/RoomPage/RoomPage.css
@@ -18,6 +18,7 @@
     /* border: 1px solid #000; */
     display: grid;
     grid-template-columns: 60% 1fr;
+    height: 530px;
 }
 
 /************* HEADER *************/
@@ -247,6 +248,152 @@
     cursor: pointer;
 }
 
+.services_selector {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0);
+    visibility: hidden;
+    transition: .5s;
+}
+.services_selector.active {
+    visibility: visible;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.services_selector .services_holder {
+    width: 300px;
+    height: 350px;
+    background-color: #fff;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    border-radius: 20px;
+    padding: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(.5);
+    opacity: 0;
+    transition: .5s;
+}
+
+.services_selector .services_holder.active {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+}
+
+.services_holder .services_close {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    box-shadow: 0 0px 3px rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.24);
+    background-color: #fff;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.services_holder .services_close:hover {
+    background-color: #515151;
+}
+
+.services_close:hover > div {
+    background-color: #fff;
+}
+
+.services_close > div {
+    width: 15px;
+    height: 2px;
+    background-color: #000;
+    position: absolute;
+    top: 50%;
+    left: 50%;   
+    transition: .2s;
+}
+
+.services_close > div:first-child {
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.services_close > div:last-child {
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.services_holder .services_title {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.services_holder .services_item {
+    width: 90%;
+    height: 50px;
+    margin: 0 auto 10px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    font-size: 18px;
+    color: #000;
+}
+
+
+.services_item .item_selector {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    background-color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.services_item .item_selector:hover {
+    background-color: #515151;
+    color: #fff;
+}
+
+.services_selector .total_price {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: red;
+    padding-top: 10px;
+    margin-bottom: 15px;
+}
+
+.services_holder button {
+    display: block;
+    font-size: 18px;
+    padding: 7px 15px;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: .2s;
+}
+
+.services_holder button:hover {
+    background-color: #515151;
+    color: #fff;
+}
+
 /************** MEDIA AUERIES **************/
 
 @media screen and (max-width: 992px) {
@@ -256,6 +403,7 @@
     
     .room_header .content {
         grid-template-columns: 1fr;
+        height: auto;
     }
     .room_header .room_preview {
         width: 100vw;
@@ -290,6 +438,10 @@
     .room_booking .room_guests,
     .room_booking .book_btn {
         margin: 0 auto 20px;
+    }
+
+    .room_booking .room_price {
+        text-align: center;
     }
 
     .room_booking .book_btn {
