--- a/src/Components/Content/Rooms/RoomPage/RoomPage.css
+++ b/src/Components/Content/Rooms/RoomPage/RoomPage.css
@@ -44,17 +44,10 @@
     width: 300px;
     height: 250px;
     background-color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     border-radius: 10px;
+    overflow: hidden;
+    border: none;
 }
 
 .room_booking .room_guests {
