--- a/src/Components/Modals/BookingModal/BookingModal.css
+++ b/src/Components/Modals/BookingModal/BookingModal.css
@@ -16,8 +16,8 @@
 }
 
 .booking_modal {
-    width: 600px;
-    height: 400px;
+    width: 660px;
+    height: 520px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -147,18 +147,20 @@
     font-size: 24px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .booking_modal .booking_calendar {
     width: 100%;
     height: 50%;
     background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 30px;
+    border: none;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.booking_calendar .react-calendar__navigation {
+    margin-bottom: 0em;
 }
 
 .booking_modal .booking_guests {
@@ -295,7 +297,7 @@
 
     .booking_modal .booking_calendar {
         width: 300px;
-        height: 280px;
+        height: 230px;
         margin: 0 auto 15px;
     }
 
