--- a/src/Components/Content/Home/Home.css
+++ b/src/Components/Content/Home/Home.css
@@ -1,6 +1,6 @@
 .home {
     min-height: 150vh;
-    background-color: #fff;
+    background-color: #fafafa;
 }
 
 /************** WIDGET **************/
