booking logic in progress

--- a/src/Components/Modals/BookingCart/BookingCart.css
+++ b/src/Components/Modals/BookingCart/BookingCart.css
@@ -285,7 +285,7 @@
     height: 40px;
     font-size: 18px;
     font-weight: bold;
-    color: #ccc;
+    color: #6d6d6d;
     outline: none;
     border: none;
     border-bottom: 3px solid #ccc;
